--- a/src/components/EEmpty/EEmpty.scss
+++ b/src/components/EEmpty/EEmpty.scss
@@ -4,6 +4,8 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: inherit;
+  background-color: var(--gray);
+  color: var(--secondary);
+  font-size:16px;
   z-index: 30;
 }
