--- a/src/components/EPanel/EPanel.scss
+++ b/src/components/EPanel/EPanel.scss
@@ -1,5 +1,5 @@
 .e-panel {
-  @apply bg-white rounded-xl overflow-hidden flex flex-col;
+  @apply bg-white rounded-xl flex flex-col;
 
   &-title{
     @apply text-sm py-2 px-3;
