--- a/src/components/EEmpty/EEmpty.scss
+++ b/src/components/EEmpty/EEmpty.scss
@@ -4,7 +4,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: var(--gray);
+  background-color: white;
   color: var(--secondary);
   font-size:16px;
   z-index: 30;
