--- a/src/components/ELoading/ELoading.scss
+++ b/src/components/ELoading/ELoading.scss
@@ -7,7 +7,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: var(--gray);
+  background-color: white;
   opacity: 1;
   z-index: 40;
 }
