--- a/src/components/EPanel/EPanel.scss
+++ b/src/components/EPanel/EPanel.scss
@@ -1,11 +1,11 @@
 .e-panel {
-  @apply bg-white rounded-xl flex flex-col overflow-hidden;
+  @apply bg-white rounded-xl flex flex-col;
 
   &-title{
     @apply text-sm py-2 px-3;
   }
 
   &-content {
-    @apply flex-1 overflow-auto;
+    @apply flex-1;
   }
 }
