--- a/src/components/ETabbar/ETabbar.scss
+++ b/src/components/ETabbar/ETabbar.scss
@@ -1,10 +1,12 @@
 .e-tabbar {
   padding-top: 55px;
+  padding-bottom: constant(safe-area-inset-bottom); // 兼容 IOS<11.2
+  padding-bottom: env(safe-area-inset-bottom); // 兼容 IOS>11.2
 }
 
 .van-tabbar-item__icon {
   margin-bottom: 0;
-  
+
   img {
     height: inherit;
   }
