--- a/src/components/EEmpty/EEmpty.scss
+++ b/src/components/EEmpty/EEmpty.scss
@@ -4,8 +4,20 @@
   left: 0;
   right: 0;
   bottom: 0;
+  padding: 0;
   background-color: white;
   color: var(--secondary);
   font-size:16px;
   z-index: 30;
+
+  .van-empty__image {
+    width: 50%;
+    height: 50%;
+    max-height: 160px;
+    max-width: 160px;
+  }
+
+  img {
+    object-fit: contain;
+  }
 }
