--- a/src/components/EIcon/EIcon.scss
+++ b/src/components/EIcon/EIcon.scss
@@ -1,8 +1,8 @@
 .e-icon {
-  @apply inline-flex items-center justify-center align-middle;
-	width: 1rem;
-	height: 1rem;
-	font-size: 1rem;
+  @apply inline-flex items-center justify-center align-middle flex-shrink-0;
+	width: 1em;
+	height: 1em;
+	font-size: 1em;
 	box-sizing: initial;
 }
 
