--- a/src/styles/_transition.scss
+++ b/src/styles/_transition.scss
@@ -1,48 +1,83 @@
-$route-transition: .3s;
 
-// 路由过渡
-.push-route {
-  &-enter-active, &-leave-active {
-    position: absolute;
-    will-change: transform;
-    transition: $route-transition;
-  }
+$route-transition: all .4s;
+$page-upper-index: 50;
+$page-lower-index: -1;
+$mask-bg: rgba(0, 0, 0, .3);
 
-  &-enter {
-    transform: translate3d(100%, 0, 0);
-  }
-
-  &-enter-active {
-    z-index: 50;
-  }
-
-  &-leave-to {
-    transform: translate3d(-20%, 0, 0);
-  }
-
-  &-leave-active {
-    z-index: 0;
-  }
+@mixin mask {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  transition: $route-transition;
+  z-index: 60;
 }
 
-.pop-route {
-  &-enter-active, &-leave-active {
-    position: absolute;
-    will-change: transform;
-    transition: $route-transition;
+#app {
+  // 路由过渡
+  .push-route {
+    &-enter-active, &-leave-active {
+      position: absolute;
+      transition: $route-transition;
+
+      &:before {
+        @include mask;
+      }
+    }
+
+    &-enter {
+      transform: translate3d(100%, 0, 0);
+    }
+
+    &-enter-active {
+      z-index: $page-upper-index;
+    }
+
+    &-leave-to {
+      transform: translate3d(-20%, 0, 0);
+
+      &:before {
+        background-color: $mask-bg;
+      }
+    }
+
+    &-leave-active {
+      z-index: $page-lower-index;
+    }
   }
 
-  &-leave-active, &-leave, &-leave-to {
-    transform: translate3d(100%, 0, 0);
-    z-index: 60 !important;
-  }
+  .pop-route {
+    &-enter-active, &-leave-active {
+      position: absolute!important;
+      will-change: transform;
+      transition: $route-transition;
 
-  &-enter {
-    transform: translate3d(-20%, 0, 0);
-    z-index: -1 !important;
-  }
+      &:before {
+        @include mask;
+      }
+    }
 
-  &-enter-to {
-    z-index: -1 !important;
+    &-leave-active, &-leave, &-leave-to {
+      transform: translate3d(100%, 0, 0);
+      z-index: $page-upper-index !important;
+    }
+
+    &-enter {
+      transform: translate3d(-20%, 0, 0);
+      z-index: $page-lower-index !important;
+
+      &:before {
+        background-color: $mask-bg;
+      }
+    }
+
+    &-enter-to {
+      z-index: $page-lower-index !important;
+      //&:before {
+      //  content: '';
+      //  position: absolute;
+      //  background-color: rgba(0, 0, 0, 0);
+      //}
+    }
   }
 }
